# pyCPTM

./: .buildinfo  .gitignore  ISSUES.md  README.md  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yml  python-package.yml
docs/source/: conf.py  index.rst
pyCPTM/: __init__.py  get_requirements.py
pyCPTM/cptm/: __init__.py  basic_models.py
pyCPTM/cptm/multiphase/: __init__.py  coalescenceModel.py  daughterSizeDistribution.py  populationBalanceModel.py
pyCPTM/io/: __init__.py  load_mesh_from_case.py  load_phi.py  write_steady_scalar_to_case.py  write_transient_scalar_to_case.py
pyCPTM/utilities/: find_matches_as_string.py  timesteps_from_case.py  timesteps_from_case_as_string.py
src/pyCPTM/: __init__.py
src/pyCPTM/cptm/: CPTMSimple.py  basic_models.py  cptm_simple.py
src/pyCPTM/cptm/multiphase/: breakupModel.py
src/pyCPTM/io/: load_mesh_from_case.py  load_phi.py  write_steady_scalar_to_case.py  write_transient_scalar_to_case.py
src/pyCPTM/mesh/: __init__.py
src/pyCPTM/utilities/: __init__.py  find_matches.py  find_matches_as_string.py  regions.py  sort_unsort.py
test/: __init__.py  runTests.ipy  test_dummy.py  test_projection.py
test/testCase/: testData.csv  testMesh.CSV
